--- a/FirebaseCourceByPhillipLackner/app/src/main/res/values/strings.xml
+++ b/FirebaseCourceByPhillipLackner/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Firebase Cource By Phillip Lackner</string>
+    <string name="webclient_id">"38793347549-1sq797u1mqvc42v6vnn3mi1nfhh6pd7j.apps.googleusercontent.com"</string>
 </resources>
